# thesis-dataset-code

./: .gitignore  LICENSE  README.md  pyproject.toml
dataset creation scripts/: build_cv_analysis_long.py  compare_cv_sections.py  constants.py  final_dataset_api.ipynb  generate_study_df_repositioned.py  jd_placeholders_augmentation.py  lang_religion_augmentation.py  paths.py  placeholder_augmentation.py  rephrase_jd_senior.py  rephrase_resume_variants.py
experiments/: _shared.py  exp0_summarise.py  exp1_pick_best_cv.py  exp2_pick_best_summary.py  exp3_leadership_potential.py  exp4_competence_scoring.py  exp4b_competence_comparative.py  exp5_job_rank.py  exp6_senior_jd.py  experiment_configs.py  run_experiments.ipynb  runner.py  validate_results.py
