[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "cv-experiments"
version = "0.1.0"
description = "Repository for the thesis code, experiment pipelines and data."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "cohere>=5.0",
    "openai>=1.0",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=6.0",
    "jupyterlab>=4.0",
]

# Script layout (no importable top-level package name matching the project).
# Ship a minimal wheel so `pip install .` / `uv sync` can resolve dependencies.
[tool.hatch.build.targets.wheel]
only-include = ["pyproject.toml", "README.md", "LICENSE"]
